--- a/package.json
+++ b/package.json
@@ -78,15 +78,22 @@
     ]
   },
   "dependencies": {
+    "@types/lodash": "^4.14.78",
+    "@types/node": "^8.0.46",
     "asyncp": "^0.8.0",
     "axios": "^0.15.3",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.4",
+    "query-string": "^5.0.0"
   },
   "description": "A javascript library for interacting with the Nissan Leaf Carwings API.",
   "devDependencies": {
+    "@types/node": "^8.0.46",
+    "awesome-typescript-loader": "^3.2.3",
     "babel-cli": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-env": "^1.0.2"
+    "babel-preset-env": "^1.0.2",
+    "source-map-loader": "^0.2.2",
+    "typescript": "^2.5.3"
   },
   "gitHead": "b769dcfc64c6c3800ae888af4a70f183d8283e5a",
   "homepage": "https://github.com/joshperry/carwings#readme",
@@ -97,7 +104,7 @@
   ],
   "license": "MIT",
   "main": "lib/index.js",
-  "name": "carwings",
+  "name": "carwings-typescript",
   "optionalDependencies": {},
   "readme": "# Carwings Javascript API Library and Tools\n\nThis code is meant for interacting with the Nissan Leaf Carwings API. This API allows one to query a swath of information about the vehicle, some of it cached in the cloud and some pulled directly from the vehicle over its cellular connectivity. The API also allows modifying a limited set of vehicle states (AC on/off, charge start/stop).\n\nIt is written for [node.js](https://nodejs.org) and uses the [babel transpiler](https://babeljs.io) mainly for taking advantage of es6 modules and es8(?) async/await to make network ops more pleasant to work with.\n\n## Getting Started\n\nThe code in `src` is the non-transpiled source, and in `lib` can be found the transpiled library that is ready to be `require()`'d directly from node >= ^6.9 (may work on older, but this is untested).\n\nAfter cloning the code (and installing node.js) simply run `npm install` to install required dependencies.\n\n## Development\n\nThere are currently a couple simple helper scripts defined in `package.json`:\n\n- `npm run build` will transpile from `src` to `lib`\n- `npm run bstart` will run the code from `src` directly using [babel-node](https://babeljs.io/docs/usage/cli/#babel-node) for a simplified dev cycle.\n\n## License\n\nMIT, yo.\n",
   "readmeFilename": "readme.markdown",
@@ -106,8 +113,8 @@
     "url": "git+https://github.com/joshperry/carwings.git"
   },
   "scripts": {
-    "bstart": "babel-node src/index.js",
-    "build": "babel src --out-dir lib",
+    "bstart": "babel-node src/index.ts",
+    "build": "webpack --colors --progress --bail",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "version": "0.1.0"
