--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es5",
+        "target": "ES6",
         "outDir": "./dist",
         "allowJs": true,
-        "lib": [ "es2015" ]
+        "lib": [ "es6" ]
     },
     "include": [
         "./src/**/*"
