--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "ES6",
-        "outDir": "./dist",
-        "allowJs": true,
-        "lib": [ "es6" ]
-    },
-    "include": [
-        "./src/**/*"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+  "compilerOptions": {
+    "lib": [ "es2015" ],
+    "module": "commonjs",
+    "target": "es5",
+    "noImplicitAny": false,
+    "sourceMap": false
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "typeRoots": [
+    "node_modules/@types"
+  ]
 }
