--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/node": "^8.0.46",
     "asyncp": "^0.8.0",
     "axios": "^0.15.3",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "query-string": "^5.0.0"
   },
   "description": "A javascript library for interacting with the Nissan Leaf Carwings API.",
@@ -16,11 +16,12 @@
     "@types/node": "^8.0.46",
     "awesome-typescript-loader": "^3.2.3",
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^0.1.19",
     "jasmine-ts": "^0.2.1",
     "lodash-webpack-plugin": "^0.11.4",
     "source-map-loader": "^0.2.2",
